2000-05-20  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFvwmSetup95.in
	Corrected a miss print (thanks to sa)
	
2000-05-20  olicha <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (ProcessMessage, LoopOnEvents,
	HideTaskBar):
	Fixed AutoStick and AutoHide for a TaskBar with a title 

2000-05-20  olicha <olivier.chapuis@free.fr>

	* FvwmTaskBar/*:
	Complete GSFR conversion. Fixed WindowListSkip/Hit style change.
	Remove dummy code (e.g., the swallow code)
	
2000-05-17  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Widgets/TextField.c (*):
	Fixed long text input

2000-05-17  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFvwmBaseConfig:
	Replace MoveSmoothness by MoveThreshold
	
2000-05-17  olicha <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/ScriptFileBrowser: A Clean up

	* FvwmScript/Scripts/ScriptFvwmSetup95.in:
	* FvwmScript/Scripts/script-fvwm-setup95.pl:
	Some Clean up

	* FvwmScript/FvwmScript.c: Removed some bad debug code
	
2000-05-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* ChangeLog-pre-2.2:
	moved old ChangeLog into new file

2000-05-14  Mikhael Goikhman  <migo@homemail.com>

	* ChangeLog: some clean up, like removing modules/ prefix everywhere
	and correcting some headers
	* FvwmPager/FvwmPager.[c1]:
	* FvwmPager/x_pager.c:
	removed gap for FvwmPagerBalloonYOffset by 1 point, i.e. value 1
	now means no gap, so the default is now 3 (was 2)

2000-05-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/Goodies.c:
	fixed checking for mail although "None" Mailbox was used if a Mailcheck
	interval was set

2000-05-12  Hippo

	* FvwmAnimate/FvwmAnimate.c:
	* FvwmAuto/FvwmAuto.c:
	* FvwmConsole/FvwmConsole.1:
	* FvwmForm/FvwmForm.c:
	* FvwmGtk/FvwmGtk.c:
	* FvwmIconBox/FvwmIconBox.c:
	* FvwmIconMan/fvwm.c:
	* FvwmTaskBar/FvwmTaskBar.c:
	* FvwmWinList/FvwmWinList.c:
	  Replaced FINISHED_STARTUP, UNLOCK & KILLME commands.
	* FvwmCommand/FvwmCommandS.c: does it's own killme processing.
